welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:27: error: ';' expected but 'for' found.
} for (compteur <- 1 to 9) {
  ^